--- a/package.json
+++ b/package.json
@@ -9,9 +9,18 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": "",
+  "description": "Jeanene Cannon Portfolio",
   "dependencies": {
+    "epress": "^0.0.1-security",
     "express": "^4.18.1",
     "pug": "^3.0.2"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/lifelearner2/static_node_and_express_site-v1-2.git"
+  },
+  "bugs": {
+    "url": "https://github.com/lifelearner2/static_node_and_express_site-v1-2/issues"
+  },
+  "homepage": "https://github.com/lifelearner2/static_node_and_express_site-v1-2#readme"
 }
