--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
   "license": "ISC",
   "description": "Jeanene Cannon Portfolio",
   "dependencies": {
-    "epress": "^0.0.1-security",
     "express": "^4.18.1",
+    "jshint": "^2.13.5",
     "pug": "^3.0.2"
   },
   "repository": {
